change file name

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   width: 100%;
   height: 100vh;
-  background: url(../images/owl&night_owl.jpg) no-repeat; 
+  background: url(../images/owl-and-night_owl.jpg) no-repeat; 
   background-size: cover;
 }
   header {
