--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,155 +2,399 @@ body {
   margin: 0;
   width: 100%;
   height: 100vh;
-  background: url(../images/owl-and-night_owl.jpg) no-repeat; 
+  background: linear-gradient(6deg, rgba(0, 0, 0, 0.6615021008403361) 12%, rgba(12, 9, 68, 0.7819502801120448) 37%);
   background-size: cover;
 }
-  header {
-    display: flex;
-    padding: 20px;
-    flex-direction: row;
-    align-items: center;
-   
-   }
-   header .container-header {
-    width: calc(100% - 70px);
-    display: flex;
-    align-items: center;
-  }
-      #lines{ 
-      border-bottom: 13px double rgb(127, 248, 14); 
-      border-top: 4px solid rgb(127, 248, 14); 
-      content:"";
-      height: 6px; 
-      cursor: pointer;
-      width:35px;
-      }
-      header .logo {
-      width: 100%;
-      max-width: 300px;
-      margin: 0 30px;
-      background-size: contain;
-      background-position: center;
-      }
-      header .menu {
-      width: 100%;
-      margin: 0 auto;
-      color: #ffffff;
-      cursor: pointer;
-      list-style-type: none;
-      display: flex;
-      align-items: center;
-      max-width: 570px;
-     }
-    li{
-      padding: 0 10px;
-    }
-  
-  .owl {
-    display: flex;
-    background-color: black;
-    align-items: center;
-    justify-content: space-around;
-  }
-  h1 {
-    font-size: 56px;
-    font-weight: 700;
-    margin-bottom: 25px;
-    line-height: 40px;
-    color: aqua;
-    text-align: center;    /* text-decoration: underline; */
-    border-bottom: 2px solid aqua; /* Параметры линии под текстом */
-    font-weight: normal; /* Убираем жирное начертание */
-    padding-bottom: 5px; /* Расстояние от текста до линии */
-   }
-   h2 {
-    font-size: 36px;
-    font-weight: 700;
-    margin-bottom: 25px;
-    line-height: 40px;
-    color: aqua;
-    text-align: center;
-    text-decoration: underline;
-   }
-   h3{
-    font-size: 36px;
-    font-weight: 700;
-    margin: 150px 0 0 0;
-    line-height: 40px;
-    color: aqua;
-    text-align: center;
-    text-decoration: underline;
-   }
-   h5{
-    color: aqua;
-    font-size: larger;
-    text-align: center;
-    margin: 20px 0 0 0;
-   }
-   p{
-    display: block;
-    color: aqua;
-    font-size: larger;
-   text-align: center;
-    margin: 20px 0 0 0;
-   }
-   span {
-    display: block;
-    color: aqua;
-    font-style: italic;
-    text-align: center;
-    margin: 0;
-  }
-  i{
-    font-size: x-large;
-    text-decoration: underline;
-  }
-  ol {
-    padding-left: 15px;
-    margin: 20px 100px 0 0;
-    color: aqua;
-  }
-  ul {
-    padding-left: 20px;
-    color: aqua;
-  }
-  .ul{
-    display: inline-block;
-    width: 33%;
-  }
-  .list{
-    width: 100%;
-    text-align:  center;
-    }
-  li{
-   text-align: left;
-   }
-  .text-owl {
-    width: 66%;
-    flex-direction: column;
-  }
-  .half {
-    width: 100%;
-    align-items: center;
-  }
-  .info{
-    display: flex;
-    background-color: darkgrey;
-    justify-content: space-around;
-  }
-  .about-us{
-    width: 25%;
-  }
-    
 
-  .societal-button-container {
-    display: block;
-    width: 90px;
-  }
-  .societal-button{
-    transform: rotate(270deg);
-    width: 30px;
-    height: 30px;
-    margin: 5px;
-    cursor: pointer;
-   }
+header {
+  width: 100%;
+  display: flex;
+  height: 80px;
+  min-height: 40px;
+  flex-direction: row;
+  align-items: center;
+  background-color: gray;
+}
+
+.center {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
+  min-width: 800px;
+}
+
+header .container-header {
+  width: calc(100% - 70px);
+  display: flex;
+  align-items: center;
+}
+
+.svg-menu {
+  width: 30px;
+  cursor: pointer;
+  padding: 0 20px;
+}
+
+line {
+  stroke: #ffffff;
+  stroke-width: 2;
+}
+
+header .logo {
+  margin: 80px 30px 0;
+  width: 200px;
+  height: 200px;
+  border-radius: 100px;
+  background-size: contain;
+  background-position: center;
+  background-image: url(../images/logo.png);
+  max-width: 100%;
+  cursor: pointer;
+
+}
+
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  color: #ffffff;
+  margin: 0 30px;
+  background-image: url(../images/avatar.jpg);
+  background-position: center;
+  background-size: contain;
+  cursor: pointer;
+}
+
+header .menu {
+  width: 33%;
+  margin: 0 auto;
+  color: #ffffff;
+  cursor: pointer;
+  list-style-type: none;
+  font-size: 21px;
+  display: flex;
+  align-items: center;
+  max-width: 380px;
+}
+
+li {
+  padding: 0 10px;
+}
+
+.owl-title {
+  width: 100%;
+  display: flex;
+  height: 600px;
+  align-items: center;
+  background: url(../images/owl-and-night_owl.jpg) no-repeat;
+  background-size: cover;
+}
+
+.empty {
+  width: 20%;
+  height: 400px;
+}
+
+.title {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+}
+
+.owl {
+  width: 100%;
+  max-width: 1200px;
+  display: flex;
+  border-radius: 30px;
+  margin: 10px auto;
+  background-color: rgb(44, 100, 72);
+  align-items: center;
+  justify-content: space-around;
+}
+
+.owl-right {
+  background-size: cover;
+  align-items: center;
+  justify-content: center;
+}
+
+.owl-title-text {
+  display: flex;
+  width: 100%;
+  max-width: 1200px;
+  border-radius: 30px;
+  margin: 10px auto;
+  align-items: center;
+  justify-content: space-around;
+  background-color: darkolivegreen;
+}
+
+.owltext {
+  display: flex;
+  width: 60%;
+  flex-direction: column;
+  align-items: center;
+}
+
+.eagle-owl-img {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.owlimg {
+  width: 80%;
+  padding: 10px 30px;
+}
+
+img {
+  width: 100%;
+}
+
+.owlimg-right {
+  width: 90%;
+  padding: 10px;
+  flex-grow: 1;
+}
+
+.owl-and-eagle-owl {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(85, 100, 95);
+}
+
+.text-full {
+  padding: 0 20px;
+}
+
+.interesting-facts {
+  border-radius: 30px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 10px auto;
+  display: flex;
+  align-items: center;
+  background-color: rgba(29, 25, 25, 0.75);
+}
+
+.interesting-facts-text {
+  width: 25%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  padding: 30px;
+}
+
+.barn {
+  padding: 10px;
+}
+
+.copirat {
+  width: 100%;
+  background-color: black;
+}
+
+h1 {
+  margin: 0;
+  font-size: 56px;
+  font-weight: 700;
+  margin-bottom: 25px;
+  line-height: 40px;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  /* text-decoration: underline; */
+  border-bottom: 2px solid rgb(255, 255, 255);
+  /* Параметры линии под текстом */
+  font-weight: normal;
+  /* Убираем жирное начертание */
+  padding-bottom: 5px;
+  /* Расстояние от текста до линии */
+}
+
+h2 {
+  margin: 0;
+  max-width: 1000px;
+  font-size: 36px;
+  font-weight: 700;
+  margin-bottom: 25px;
+  line-height: 40px;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  text-decoration: underline;
+}
+
+h3 {
+  margin: 0;
+  font-size: 36px;
+  font-weight: 700;
+  margin: 15px 0 0 0;
+  line-height: 40px;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  text-decoration: underline;
+}
+
+h5 {
+  margin: 0;
+  color: rgb(255, 255, 255);
+  ;
+  font-size: larger;
+  text-align: center;
+  margin: 10px 0 0 0;
+}
+
+p {
+  margin: 0;
+  padding: 10px 0;
+  display: block;
+  color: rgb(255, 255, 255);
+  font-size: larger;
+  text-align: center;
+  margin: 10px 0 0 0;
+  font-size: 1.2rem;
+  text-align: justify;
+}
+
+span {
+  display: block;
+  color: rgb(255, 255, 255);
+  font-style: italic;
+  text-align: center;
+  margin: 0;
+}
+
+i {
+  font-size: x-large;
+  text-decoration: underline;
+}
+
+ol {
+  padding-left: 15px;
+  margin: 0px 10px 0 0;
+  color: rgb(255, 255, 255);
+}
+
+ul {
+  padding-left: 50px;
+  color: rgb(255, 255, 255);
+}
+
+.ul {
+  display: inline-block;
+  width: 33%;
+}
+
+.list {
+  width: 100%;
+  text-align: center;
+}
+
+li {
+  text-align: left;
+}
+
+.text-owl {
+  width: 60%;
+  padding: 20px;
+  flex-direction: column;
+
+}
+
+.half {
+  width: 100%;
+  align-items: center;
+}
+
+.info {
+  display: flex;
+  background-color: darkgrey;
+  justify-content: space-around;
+}
+
+.about-us {
+  width: 25%;
+}
+
+.table {
+  width: 100%;
+  max-width: 1200px;
+  margin: 10px auto;
+  align-items: center;
+  border-spacing: 1px;
+  background-color: dimgray;
+}
+
+table {
+  display: table;
+  width: 100%;
+  max-width: 1200px;
+  margin: 10px auto;
+  font-family: ui-monospace;
+  color: #ffffff;
+  font-size: 24px;
+  align-items: center;
+  border-collapse: collapse;
+  letter-spacing: 2%;
+  border-spacing: 1px;
+  background-color: dimgray;
+}
+
+tbody th {
+  background-color: rgb(56, 77, 8);
+  color: #fff;
+  text-align: left;
+}
+
+thead,
+th {
+  background-color: #24442f8f;
+  border: 4px solid black;
+  font-weight: bolder;
+}
+
+td, th, tr {
+  padding: 5px;
+  border: 2px solid black;
+  text-align: center;
+  border-color: black;
+}
+
+.dimensions {
+  width: 10%;
+}
+
+.foto {
+  width: 35%;
+}
+
+.name {
+  width: 15%;
+}
+
+.scops-owl {
+  width: 60%;
+}
+
+.societal-button-container {
+  display: block;
+  width: 90px;
+}
+
+.societal-button {
+  transform: rotate(270deg);
+  width: 30px;
+  height: 30px;
+  margin: 5px;
+  cursor: pointer;
+}
